Allow to change logo and icon on the ui
